@@ -1,6 +1,8 @@
 Revision history for Dist-Zilla-Plugin-VerifyPhases
 
 {{$NEXT}}
+          - fix handling of skip_distmeta fields (i.e. special-casing of
+            x_static_install)
 
 0.012     2015-08-09 01:02:10Z
           - now also checking for prereqs provided with other metadata,
